--- a/src/VNEDC/chart/templates/chart/param_value_rate.html
+++ b/src/VNEDC/chart/templates/chart/param_value_rate.html
@@ -70,8 +70,16 @@ var config = {
 
 $(document).ready(function () {
     $('.select2').select2({
+        tags: true,
         placeholder: '---',
         allowClear: true
+    });
+
+    $('#id_product').on('change', function() {
+        var value = $(this).val();
+        if ($('#id_product').val() === '') {
+            $('#id_product').val(value).trigger('change');
+        }
     });
 
     var ctx = document.getElementById('canvas').getContext('2d');
