--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -102,6 +102,7 @@ function validate(evt) {
     {% if user.is_authenticated %}
     <form action="{% url 'prod_info_save' %}" method="POST" id="session_form">
         {% csrf_token %}
+        <input type="hidden" name="form_type" value="method_1" />
         <div class="row">
             <div class="col-md-3">
                 <div id="div_id_plant" class="form-group">
